# iced_spinner

./: Cargo.toml  README.md
examples/: many_spinners.rs  spinner.rs
src/: lib.rs
